--- a/yongmoticon.css
+++ b/yongmoticon.css
@@ -1,1 +1,137 @@
+span[data-param1="GrammarKing"] img {
+    background: url(https://66.media.tumblr.com/b3ae457cc1f809487f60e04b08bb3d1a/tumblr_plfgzpa8VM1xyy3p1o1_75sq.gif)no-repeat;
+    width: 25px;
+    padding-left: 25px;
+	padding-top: 25px;
+    background-size: 25px 25px;
+}
 
+img[alt="GrammarKing"], #article-content-wrapper #article-content img[alt="GrammarKing"] {
+    background: url(https://66.media.tumblr.com/b3ae457cc1f809487f60e04b08bb3d1a/tumblr_plfgzpa8VM1xyy3p1o1_75sq.gif);
+    width: 50px;
+    height: 50px !important;
+    padding-left: 50px;
+    background-size: 50px 50px;
+}
+span[data-param1="PanicVis"] img {
+    background: url(https://66.media.tumblr.com/3aa7cee49c6bcd123965b88d1f12b513/tumblr_plfgzkNzgT1xyy3p1o1_75sq.gif)no-repeat;
+    width: 25px;
+    padding-left: 25px;
+	padding-top: 25px;
+    background-size: 25px 25px;
+}
+
+img[alt="PanicVis"], #article-content-wrapper #article-content img[alt="PanicVis"] {
+    background: url(https://66.media.tumblr.com/3aa7cee49c6bcd123965b88d1f12b513/tumblr_plfgzkNzgT1xyy3p1o1_75sq.gif);
+    width: 50px;
+    height: 50px !important;
+    padding-left: 50px;
+    background-size: 50px 50px;
+}
+span[data-param1="ANELE"] img {
+    background: url(https://66.media.tumblr.com/ff3098678b6b28923e49b2f00ad166b7/tumblr_plfgzeCF5D1xyy3p1o1_75sq.gif)no-repeat;
+    width: 25px;
+    padding-left: 25px;
+	padding-top: 25px;
+    background-size: 25px 25px;
+}
+
+img[alt="ANELE"], #article-content-wrapper #article-content img[alt="ANELE"] {
+    background: url(https://66.media.tumblr.com/ff3098678b6b28923e49b2f00ad166b7/tumblr_plfgzeCF5D1xyy3p1o1_75sq.gif);
+    width: 50px;
+    height: 50px !important;
+    padding-left: 50px;
+    background-size: 50px 50px;
+}
+span[data-param1="BrokeBack"] img {
+    background: url(https://66.media.tumblr.com/2bdc38fddaf2b9cd1faf670c656c374a/tumblr_plfgz0kqpj1xyy3p1o1_75sq.gif)no-repeat;
+    width: 25px;
+    padding-left: 25px;
+	padding-top: 25px;
+    background-size: 25px 25px;
+}
+
+img[alt="BrokeBack"], #article-content-wrapper #article-content img[alt="BrokeBack"] {
+    background: url(https://66.media.tumblr.com/2bdc38fddaf2b9cd1faf670c656c374a/tumblr_plfgz0kqpj1xyy3p1o1_75sq.gif);
+    width: 50px;
+    height: 50px !important;
+    padding-left: 50px;
+    background-size: 50px 50px;
+}
+       
+span[data-param1="PipeHype"] img {
+    background: url(https://66.media.tumblr.com/661e84bccf740b0e9fa5fa45d7f41106/tumblr_plfgyrV2NE1xyy3p1o1_75sq.gif)no-repeat;
+    width: 25px;
+    padding-left: 25px;
+	padding-top: 25px;
+    background-size: 25px 25px;
+}
+
+img[alt="PipeHype"], #article-content-wrapper #article-content img[alt="PipeHype"] {
+    background: url(https://66.media.tumblr.com/661e84bccf740b0e9fa5fa45d7f41106/tumblr_plfgyrV2NE1xyy3p1o1_75sq.gif);
+    width: 50px;
+    height: 50px !important;
+    padding-left: 50px;
+    background-size: 50px 50px;
+}
+span[data-param1="YouWHY"] img {
+    background: url(https://66.media.tumblr.com/5ff2d1248358e8f11723caeb2707fcca/tumblr_plfgycv4qN1xyy3p1o1_75sq.gif)no-repeat;
+    width: 25px;
+    padding-left: 25px;
+	padding-top: 25px;
+    background-size: 25px 25px;
+}
+
+img[alt="YouWHY"], #article-content-wrapper #article-content img[alt="YouWHY"] {
+    background: url(https://66.media.tumblr.com/5ff2d1248358e8f11723caeb2707fcca/tumblr_plfgycv4qN1xyy3p1o1_75sq.gif);
+    width: 50px;
+    height: 50px !important;
+    padding-left: 50px;
+    background-size: 50px 50px;
+}
+span[data-param1="RitzMitz"] img {
+    background: url(https://66.media.tumblr.com/d9a7a3ab46fbab60382f874fbf941a30/tumblr_plfgy1mI3f1xyy3p1o1_75sq.gif)no-repeat;
+    width: 25px;
+    padding-left: 25px;
+	padding-top: 25px;
+    background-size: 25px 25px;
+}
+
+img[alt="RitzMitz"], #article-content-wrapper #article-content img[alt="RitzMitz"] {
+    background: url(https://66.media.tumblr.com/d9a7a3ab46fbab60382f874fbf941a30/tumblr_plfgy1mI3f1xyy3p1o1_75sq.gif);
+    width: 50px;
+    height: 50px !important;
+    padding-left: 50px;
+    background-size: 50px 50px;
+}
+span[data-param1="EleGiggle"] img {
+    background: url(https://66.media.tumblr.com/1e6d5ef949690c36a64770a2f6862660/tumblr_plgc3dZv031xyy3p1o1_75sq.gif)no-repeat;
+    width: 25px;
+    padding-left: 25px;
+	padding-top: 25px;
+    background-size: 25px 25px;
+}
+
+img[alt="EleGiggle"], #article-content-wrapper #article-content img[alt="EleGiggle"] {
+    background: url(https://66.media.tumblr.com/1e6d5ef949690c36a64770a2f6862660/tumblr_plgc3dZv031xyy3p1o1_75sq.gif);
+    width: 50px;
+    height: 50px !important;
+    padding-left: 50px;
+    background-size: 50px 50px;
+}
+
+span[data-param1="TheThing"] img {
+    background: url(https://66.media.tumblr.com/68a1766c2cfa9880348c64520d96fbb5/tumblr_plgc31cqYh1xyy3p1o1_75sq.gif)no-repeat;
+    width: 25px;
+    padding-left: 25px;
+	padding-top: 25px;
+    background-size: 25px 25px;
+}
+
+img[alt="TheThing"], #article-content-wrapper #article-content img[alt="TheThing"] {
+    background: url(https://66.media.tumblr.com/68a1766c2cfa9880348c64520d96fbb5/tumblr_plgc31cqYh1xyy3p1o1_75sq.gif);
+    width: 50px;
+    height: 50px !important;
+    padding-left: 50px;
+    background-size: 50px 50px;
+}
