--- a/pc_css.css
+++ b/pc_css.css
@@ -663,18 +663,20 @@ header #header-bar {
   }
 }
 
-#board-info h1>a {
-    opacity: 0;
-    color: #181d1a00;
-}
 
 #board-info h1 {
-    background-repeat: no-repeat;
-    background-image: url(https://yonggether.github.io/images/banner/name.png);
     background-size: 100px;
     height: 34px;
     background-position: 0px 0px;
 }
+
+#board-info h1{visibility:hidden;background-repeat:no-repeat;border-bottom:none;padding-bottom:0}
+#board-info h1 a{display:inline-block;margin-left:-93px;}
+#board-info h1 a:after{visibility:visible;display:inline-block;background-image:url(https://yonggether.github.io/images/banner/name_1.png);background-size:auto 30px;background-repeat:no-repeat;content:"";width:110px;height:30px;vertical-align:top}
+#board-info h1 a:hover:after{background-image:url(https://yonggether.github.io/images/banner/name_2.png)}
+.badge {visibility: visible;}
+#board-info #viewers-area {visibility: visible;}
+
 
 #article-list-row-9490238 .item .list-title {
     background: url(https://upload.tgd.kr/20181207/2816e6603c62a402dc3238622fd36614.png) no-repeat;
